tests/NormalTests/paczka1/fuzzy1/70704836.err
Error in line 1: 6of3v A901 64,5
Error in line 2: 6of3v A729 3,3
Error in line 5: mmmx A898 58,05
Error in line 3: mmmx A901 19,5
Error in line 16: 6of3v S267 16,3
Error in line 33: mmmx A898 64,4
